<resources>
    <string name="app_name">VMG App</string>
    /* Tela de adição de créditos */
    <string name="textoCreditos">Insira seu código promocional.</string>
    <string name="textoBotaoCreditos">Aceitar</string>
    <string name="creditosAtuaisDefault">R$00.00</string>
    <string name="telaCreditos">Adicionar Créditos</string>
    <string name="seusCreditos">Créditos Atuais</string>

    /* Tela de seleção de produtos */
    <string name="item1">Amendoim</string>
    <string name="item2">Castanha de Caju</string>
    <string name="item3">Castanha do Pará</string>
    <string name="selecioneProdutos">Selecione os produtos desejados</string>
    <string name="voceSelecionou">Você selecionou:</string>
    /* Tela de seleção de pesos */

    /* Tela de confirmação de compras */
    <string name="voceEscolheu">Você escolheu:</string>
    <string name="cancelarCompra">Cancelar</string>
    <string name="confirmarCompra">Confirmar</string>
    <string name="modoMisto">Entregar Separado</string>
    <string name="botaoModoMisto">Modo de Entrega</string>

    /* Tela de conexao */
    <string name="confirmConnect">Conectar</string>
    <string name="botaoAdicionarCreditos">Adicionar Créditos</string>

    /* Botões gerais */
    <string name="button_voltar">VOLTAR</string>
    <string name="aceitar">ACEITAR</string>

    /* Recycler view */
    <string name="nomeproduto_1">Amendoim</string>

    /* Strings gerais */
    <string name="placeholder">PLACEHOLDER</string>
    <string name="bMenos50g">-50g</string>
    <string name="bMais50g">+50g</string>
    <string name="bConfirmar">OK</string>
    <string name="tvItem3Confirmacao">Castanha de Caju: 0g</string>
    <string name="tvItem2Confirmacao">Castanha do Pará: 0g</string>
    <string name="tvItem1Confirmacao">Amendoim: 0g</string>
    <string name="valorTotalCastanhaPara">Castanha do Pará: %d g</string>
    <string name="valorTotalCastanhaCaju">Castanha de Caju: %d g</string>
    <string name="valorTotalAmendoim">Amendoim: %d g</string>
</resources>