<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicaoCreditos">
    <TextView
        android:id="@+id/seusCreditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:textSize="40dp"
        android:text="@string/seusCreditos"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/creditosAtuais"/>

    <TextView
        android:id="@+id/creditosAtuais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:textSize="50dp"
        android:text="@string/creditosAtuaisDefault"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputCreditos"
        android:layout_marginBottom="70dp"/>

    <EditText
        android:id="@+id/inputCreditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="text"
        android:text="@string/textoCreditos"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_adicaoCreditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoBotaoCreditos"
        app:layout_constraintLeft_toLeftOf="@+id/inputCreditos"
        app:layout_constraintRight_toRightOf="@+id/inputCreditos"
        app:layout_constraintTop_toBottomOf="@+id/inputCreditos" />

    <Button
        android:id="@+id/button_voltar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/button_voltar"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>