<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmacaoCompra">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/telaCreditos"
        android:text="@+string/telaCreditos"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voceEscolheu"
        android:id="@+id/voceEscolheu"
        android:textAlignment="center"
        android:textSize="50dp"
        app:layout_constraintTop_toBottomOf="@id/telaCreditos"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/voceEscolheu"
        app:layout_constraintBottom_toTopOf="@id/confirmarCompra"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:id="@+id/confirmarCompra"
        android:text="@string/confirmarCompra"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:id="@+id/botaoCancelar"
        android:text="@string/cancelarCompra"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>